virtgpu: vtest drm ioctl shim
An idea I had.. I was looking at vtest to see what it would take to add support for freedreno. But it looks like I can't really re-use anything easily from virgl or venus (which don't seem to share code either).
But what if, instead, we had an LD_PRELOAD ioctl shim, similar to drm-shim (and it might even be possible to re-use some code from drm-shim), which talked the vtest protocol to virglrenderer? This seems like it would allow for deleting a lot of vtest code in virgl and venus.
I'm a bit unsure about handling out-fence-fd's, but probably we could use sw_sync. I guess it isn't too bad to require that sw_sync is enabled in the kernel in order to use vtest.