WIP: virtio: Implement drm shim on top of vtest

Unlike the noop shim that some other drivers have, this one uses the
vtest protocol to communicate with virglrenderer, for testing without
a VM.

Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/6407