src/virtio/drm-shim/README.md
@@ -1,0 +1,5 @@
+### virtgpu_vtest backend
+
+A shim virtgpu LD_PRELOAD shim which uses the vtest protocol to
+communicate to virglrenderer.
+
